sand-macros/tests/cases/fail_function_uppercase.stderr
error: invalid resource path in #[function(...)]: path must only contain [a-z0-9_./-] in `Foo/Bar`
 --> tests/cases/fail_function_uppercase.rs:3:12
  |
3 | #[function("Foo/Bar")]
  |            ^^^^^^^^^
