sand-macros/tests/cases/fail_function_uppercase.rs
use sand_macros::function;

#[function("Foo/Bar")]
fn bad() {}

fn main() {}
